# GLOC

./: .gitignore
Data/Archive/TestData/Calib_Output/: 2025-04-11 23:18:40.xml  test.txt
Data/Archive/TestData/Meta/: 2025-04-11 12:22:06.xml  2025-04-11 12:22:09.xml  2025-04-11 23:17:18.xml  2025-04-11 23:18:40.xml
Data/Archive/TestData/Point/: 2025-04-11 12:22:09.txt  2025-04-11 23:17:17.txt  2025-04-11 23:17:18.txt
Data/Render_Config/Config/: TestBoard.xml
Data/Render_Config/Configs/: testboard.xml
Data/TestBoard/Calib_Output/: points_0000.xml
Data/TestBoard/Meta/: meta_0000.xml
Data/TestBoard/Point/: points_0000.txt
Data/TestData/Meta/: 2025-04-11 12:22:13.xml  2025-04-11 23:17:17.xml
Data/TestData/Point/: 2025-04-11 12:22:06.txt  2025-04-11 12:22:09.txt  2025-04-11 12:22:11.txt  2025-04-11 12:22:13.txt  2025-04-11 23:17:17.txt  2025-04-11 23:17:18.txt  2025-04-11 23:18:40.txt
Data/TestMeta/MetaData/: 2025-04-11 12:22:11.xml
Tools/ZhangFinder/: CMakeLists.txt
Tools/ZhangFinder/GeneratorFiles/: ClosedSolver.xml  PointLoader.xml  Points.xml  ZhangProblem.xml  ZhangUtils.xml
Tools/ZhangFinder/Resources/: config.xml
Tools/ZhangFinder/ZhangFinder/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Tools/ZhangFinder/ZhangFinderLib/: CMakeLists.txt  ClosedSolver.cpp  ClosedSolver.h  PointLoader.cpp  PointLoader.h  Points.h  ZhangProblem.cpp  ZhangProblem.h  ZhangUtils.cpp  ZhangUtils.h
Tools/ZhangFinder/ZhangFinderLib/Solver/: LMFinder.cpp  LMFinder.h  ProblemBase.h  cminpack.c  cminpack.h
Tools/ZhangFinder/ZhangFinderTests/: CMakeLists.txt
Tools/ZhangFinder/ZhangFinderTests/Helpers/: TestHelpers.cpp  TestHelpers.h
Tools/ZhangFinder/ZhangFinderTests/Resources/: 2025-04-11 23:18:40.txt  points_0000.txt
Tools/ZhangFinder/ZhangFinderTests/Tests/: ClosedSolver_Tests.cpp  Example_Tests.cpp  PointLoader_Tests.cpp  ZhangProblem_Tests.cpp  ZhangUtils_Tests.cpp
Utils/CalScene/: CMakeLists.txt
Utils/CalScene/CalScene/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Utils/CalScene/CalSceneLib/: ArgumentLoader.cpp  ArgumentLoader.h  Arguments.h  Board.cpp  Board.h  CMakeLists.txt  HelperUtils.cpp  HelperUtils.h  PoseHelper.cpp  PoseHelper.h
Utils/CalScene/CalSceneTests/: CMakeLists.txt
Utils/CalScene/CalSceneTests/Tests/: Example_Tests.cpp
Utils/CalScene/GeneratorFiles/: ArgumentLoader.xml  Arguments.xml  Board.xml  HelperUtils.xml  PoseHelper.xml
Utils/CalScene/Resources/: config.xml
Utils/CalScorer/: CMakeLists.txt  Calibration.h  Main.cpp  Meta.h  main.cpp
Utils/CalScorer/Resources/: config.xml
Utils/MetaGen/: ArgReader.h  CMakeLists.txt  MetaData.h  Source.cpp
Utils/PointGen/: ArgReader.h  Arguments.h  CMakeLists.txt  Source.cpp
